--- a/package.json
+++ b/package.json
@@ -3,16 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "node-sass-chokidar": "0.0.3",
-    "npm-run-all": "^4.1.1",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "massive": "^4.4.0",
+    "node-sass-chokidar": "0.0.3",
+    "npm-run-all": "^4.1.1",
+    "passport": "^0.4.0",
+    "passport-auth0": "^0.6.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.15",
     "session": "^0.1.0"
   },
@@ -28,5 +31,6 @@
   "devDependencies": {
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6"
-  }
+  },
+  "proxy": "http://localhost:3030"
 }
