--- a/package.json
+++ b/package.json
@@ -17,9 +17,14 @@
     "passport-auth0": "^0.6.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.15",
-    "session": "^0.1.0"
+    "redux": "^3.7.2",
+    "redux-promise-middleware": "^4.4.1",
+    "session": "^0.1.0",
+    "socket.io": "^2.0.4",
+    "socket.io-client": "^2.0.4"
   },
   "scripts": {
     "start-js": "react-scripts start",
